MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see <http://www.gnu.org/licenses/>.

CHANGELOG
=========
v16.0.00
--------
	Headlines

	Significant Changes

	Changes With Important Notices

	Security

	Tweaks & Bug Fixes
		Markbook: fixed multi-byte string length issue causing automatic comment expansion in Markbook view
		Students: added sibling and family information to Letters Home by Roll Group
		User Admin: fixed Child's Name list in Edit Family to include all students

v15.0.00
--------
	Headlines
		Code base refactoring of all interface forms
		Timetable Admin: added ability to map classes to Roll Group, sync enrolments, and auto-enrol new students
		Activated Brazilian Portuguese as complete languages

	Changes With Important Notices
		Planner: integrated Resources into the Planner module (/modules/Resources needs to be manually removed)

    Security
		System: fixed security vulnerability in the installer
        System: added validation and output escaping to Personal Background URL in Preferences

	Tweaks & Bug Fixes
		System: fixed erroneous Georgian language code
		System: added Greek and Amharic as development languages
		System: added South African Rand, Trinidad & Tobago Dollar, Swedish Krona, Chinese Renminbi and Russian Ruble as currencies
		System: fixed missing form validation for dropdowns created with User Custom Fields
		System: updated Google OAuth library to latest version (v2.2.0)
		System: fixed Sign In With Google to fix missing token refresh issue
        System: fixed timezone not being set in CLI scripts
		System: fixed bug preventing activity day from being correctly shown in Parent Dashboard
        System: added login options to Login with Google button
        System: added mbstring extension to the system requirements list
		System: fixed text alginment in module menu